Fix pagination to not be covered by video controls

--- a/themes/dcp/assets/scss/6-components/_splide-carousel.scss
+++ b/themes/dcp/assets/scss/6-components/_splide-carousel.scss
@@ -30,7 +30,7 @@
 
     &__pagination {
         align-items: center;
-        bottom: size(16);
+        bottom: size(32);
         display: flex;
         gap: size(8);
         justify-content: center;
